--- a/src/Components/Deals section/deals.module.css
+++ b/src/Components/Deals section/deals.module.css
@@ -5,5 +5,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 6rem;
+  margin-top: 3rem;
+  margin-bottom: 5rem;
 }
