--- a/src/Components/Header/header.module.css
+++ b/src/Components/Header/header.module.css
@@ -34,3 +34,8 @@
 .link:hover:after {
   width: 100%;
 }
+.cart {
+  border: 1px solid rgb(255, 0, 43);
+  border-radius: 50%;
+  padding: 0.6rem;
+}
