--- a/src/Components/Header/header.module.css
+++ b/src/Components/Header/header.module.css
@@ -35,7 +35,34 @@
   width: 100%;
 }
 .cart {
-  border: 1px solid rgb(255, 0, 43);
+  /* border: 1px solid rgb(255, 0, 43); */
   border-radius: 50%;
   padding: 0.6rem;
+}
+.menu {
+  display: none;
+  margin-left: 1rem;
+}
+
+@media (max-width: 760px) {
+  .header {
+    width: 100%;
+  }
+  .links p {
+    display: none;
+  }
+  .menu {
+    display: block;
+  }
+
+  .mobilelinks {
+    margin-top: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    z-index: 999;
+    border: 1px solid rgb(255, 0, 43);
+    padding: 0.4rem;
+    color: rgb(255, 0, 43);
+    border-radius: 0.4rem;
+  }
 }
