--- a/src/Components/ScrollTop/scroll.module.css
+++ b/src/Components/ScrollTop/scroll.module.css
@@ -4,15 +4,19 @@
   right: 20px;
   cursor: pointer;
   border-radius: 50%;
-  border: 1px solid rgb(255, 0, 43);
   padding: 1rem;
-  z-index: 9999;
+  z-index: 999;
   transition: all 0.3s ease;
 }
-.container:hover {
-  background-color: rgb(255, 0, 43);
-  color: white;
-}
-.container svg:hover {
-  color: white;
+
+@media (max-width: 768px) {
+  .container {
+    right: 55px;
+    margin: 0;
+    bottom: 3px;
+  }
+  .container svg {
+    width: 25px;
+    height: 20px;
+  }
 }
