--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans&family=Open+Sans&display=swap");
 
 * {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
   font-family: "Nunito Sans", sans-serif;
+}
+
+@media (min-width: 760px) {
+  .app {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+  }
 }
